# PINN_funcs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
PINN_funcs/: PDEs.py  PINNs.py  __init__.py  callbacks.py  data_handling.py  isentrop.py  layers.py  metrics.py  models.py  optimizers.py  plotting.py  training.py  utils.py
docs/: architecture.md
examples/Rhombus/: Rhombus_Euler_rxy_cflearn.py  run_rhombus_repro.py
examples/configs/: nn_training_default.json  rhombus_euler_paper_PIQS_off.json  rhombus_euler_paper_PIQS_on.json  rhombus_euler_paper_baseline.json
helpers/: fetch_data.py
tests/: test_data_handler_methods.py  test_data_handling.py  test_integration_smoke.py  test_training.py
