[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PINN_funcs"
version = "0.1.0"
description = "Physics-Informed Neural Network utilities for fluid mechanics (TensorFlow backend)."
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name="Lennart Rohlfs", email="l.rohlfs@tu-berlin.de" }
]
keywords = ["PINN", "physics-informed neural networks", "fluid mechanics", "tensorflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "scipy>=1.9.0",
    "opencv-python-headless>=4.5.0",
    "pyDOE==0.3.8",
    "tensorflow>=2.16.0",
    "keras>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pre-commit>=3.7.0",
    "ruff>=0.8.0",
]

[project.urls]
Repository = "https://github.com/AeroTUBerlin/PINN_funcs"

[tool.setuptools.packages.find]
include = ["PINN_funcs*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
